# VRC-YT

./: .gitignore  Cargo.toml  Cross.toml  Makefile.toml  README.md  index.html  rustfmt.toml  sqlx-data.json
.github/workflows/: release.yml
common/: Cargo.toml  Makefile.toml
common/src/: lib.rs  sqlx.rs  youtube_dl.rs
manager/: Cargo.toml  Makefile.toml  README.md
manager/src/: lib.rs  main.rs
proxy/: Cargo.toml  Makefile.toml  README.md
proxy/src/: lib.rs  main.rs
proxy/src/route/: mod.rs  prelude.rs  proxy.rs  root.rs
src/: main.rs
