[workspace]
members = ["common", "proxy"]

[workspace.package]
description = "Play YouTube videos on Quest in VRChat"
version = "1.3.0"
authors = ["Shayne Hartford <shaybox@shaybox.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/ShayBox/VRC-YT-Proxy"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
common = { path = "./common" }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
