[package]
name = "common"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0", optional = true }
sqlx = { version = "0.6", features = ["mysql", "json", "time"], optional = true }
thiserror = "1.0"
which = "4.4"
youtube_dl = { git = "https://github.com/Shays-Forks/youtube-dl-rs.git", branch = "personal", default-features = false, features = ["downloader"] }

[features]
native-tls = ["youtube_dl/native-tls", "sqlx?/runtime-tokio-native-tls"]
rustls-tls = ["youtube_dl/rustls-tls", "sqlx?/runtime-tokio-rustls"]
database = ["dep:sqlx", "dep:serde_json"]
