[package]
name = "common"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1", optional = true }
sqlx = { version = "0.7", features = ["mysql", "json", "time"], optional = true }
thiserror = "1"
which = "6"
youtube_dl = "0.9"

[features]
native-tls = ["youtube_dl/downloader-native-tls", "sqlx?/runtime-tokio-native-tls"]
rustls-tls = ["youtube_dl/downloader-rustls-tls", "sqlx?/runtime-tokio-rustls"]
database = ["dep:sqlx", "dep:serde_json"]
