[package]
name = "manager"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = { git = "https://github.com/Shays-Forks/clap-verbosity-flag.git", features = ["tracing"] }
common = { workspace = true, features = ["rustls-tls", "database"] }
dotenvy_macro = { version = "0.15", optional = true }
indicatif = "0.17"
thirtyfour = "0.32.0-rc"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["read-write"]
read-write = ["dep:dotenvy_macro"]
