[package]
name = "proxy"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { workspace = true, default-features = false }
log = "0.4.17"
regex = "1.7.3"
rocket = "0.5.0-rc.3"
rocket_db_pools = { version = "=0.1.0-rc.3", features = ["sqlx_mysql"], optional = true }

[features]
default = ["rustls-tls", "database"]
native-tls = ["common/native-tls"]
rustls-tls = ["common/rustls-tls"]
database = ["common/database", "dep:rocket_db_pools"]
