[package]
name = "proxy"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { workspace = true }
dotenvy = { version = "0.15", optional = true }
maud = { version = "0.26", features = ["rocket"] }
regex = "1"
rocket = "0.5"
rocket_db_pools = { version = "0.1", optional = true, features = ["sqlx_mysql"] }

[features]
default = ["database", "rustls-tls"]
database = ["common/database", "dep:dotenvy", "dep:rocket_db_pools"]
native-tls = ["common/native-tls"]
rustls-tls = ["common/rustls-tls"]

[lints.clippy]
multiple_crate_versions = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
